--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
+    "bcryptjs": "^3.0.2",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
