--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "db:seed:120": "cross-env SEED_RESET=1 SEED_MIN=120 prisma db seed",
     "dev": "next dev --turbopack",
     "db:purge": "tsx scripts/purge.ts",
     "build": "prisma generate && prisma migrate deploy && next build",
@@ -28,7 +29,6 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.14.0",
     "bcryptjs": "^3.0.2",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
@@ -42,6 +42,7 @@
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.34.0",
     "@next/eslint-plugin-next": "^15.5.2",
+    "@prisma/client": "^6.15.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.10",
@@ -52,6 +53,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "cross-env": "^10.0.0",
     "cssnano": "^6.0.1",
     "dotenv": "^17.2.1",
     "eslint": "^9.34.0",
@@ -63,7 +65,7 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.0",
-    "prisma": "^6.14.0",
+    "prisma": "^6.15.0",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.0",
