chore(tsconfig): add @/* alias; wire kenya locations & geo utils

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-
     "verbatimModuleSyntax": true,
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     },
 
     "forceConsistentCasingInFileNames": true,
