--- a/package.json
+++ b/package.json
@@ -29,13 +29,19 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@sentry/nextjs": "^10.10.0",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.3",
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
+    "posthog-js": "^1.261.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "resend": "^6.0.2",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
