--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,54 @@
 {
   "compilerOptions": {
+    /* Language / emit */
     "target": "ES2022",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "jsx": "preserve",
     "noEmit": true,
-
-    "esModuleInterop": true,
+    "verbatimModuleSyntax": true,
+    /* Type checking */
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    /* Modules / resolution (Next 15) */
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
+    "esModuleInterop": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    /* Incremental/JS */
     "incremental": true,
-    "verbatimModuleSyntax": true,
-
+    "allowJs": true,
+    /* Path aliases */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     },
-
-    "forceConsistentCasingInFileNames": true,
-    "plugins": [{ "name": "next" }]
+    /* Next.js plugin & types */
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "types": [
+      "@types/node"
+    ]
   },
   "include": [
     "next-env.d.ts",
+    "src",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/types/*.d.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
