--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,9 @@
 name: CI
 
 on:
-  pull_request:
-    branches: [ main ]
   push:
     branches: [ main ]
-
-permissions:
-  contents: read
+  pull_request:
 
 jobs:
   build:
@@ -16,39 +12,29 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Install pnpm (makes `pnpm` available in PATH)
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-          run_install: false
-
-      # Setup Node & enable pnpm lockfile caching
-      - name: Setup Node
+      - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '20.x'
           cache: 'pnpm'
 
-      - name: Print tool versions
+      - name: Enable Corepack (uses package.json#packageManager)
         run: |
-          node -v
-          pnpm -v
+          corepack enable
+          # Activate the exact pnpm version from package.json (e.g. pnpm@10.16.0)
+          corepack prepare pnpm@$(node -p "require('./package.json').packageManager.split('@')[1]") --activate
+          pnpm --version
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Prisma generate
-        run: pnpm prisma generate
-
-      - name: Build
-        env:
-          NEXT_TELEMETRY_DISABLED: '1'
-          DATABASE_URL: 'postgresql://user:pass@localhost:5432/db'
-          DIRECT_URL: 'postgresql://user:pass@localhost:5432/db'
-          AUTH_SECRET: 'devsecret'
-          NEXTAUTH_URL: 'http://localhost:3000'
-        run: pnpm build
-
       - name: Typecheck
         run: pnpm typecheck
+
+      - name: Build
+        run: pnpm build
+
+      # Optional tests (auto-skip if no Jest config)
+      - name: Test
+        if: success() && hashFiles('**/jest.config.*') != ''
+        run: pnpm test -- --ci
