--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,12 @@ jobs:
           node-version: '20.x'
           cache: 'pnpm'
 
-      - name: Enable Corepack (uses package.json#packageManager)
+      - name: Enable Corepack and activate pnpm from package.json
         run: |
           corepack enable
-          # Activate the exact pnpm version from package.json (e.g. pnpm@10.16.0)
-          corepack prepare pnpm@$(node -p "require('./package.json').packageManager.split('@')[1]") --activate
+          VERSION=$(node -p "require('./package.json').packageManager.split('@')[1]")
+          echo "Activating pnpm@${VERSION}"
+          corepack prepare pnpm@${VERSION} --activate
           pnpm --version
 
       - name: Install dependencies
@@ -34,7 +35,6 @@ jobs:
       - name: Build
         run: pnpm build
 
-      # Optional tests (auto-skip if no Jest config)
       - name: Test
         if: success() && hashFiles('**/jest.config.*') != ''
         run: pnpm test -- --ci
