--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,15 +16,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          cache: 'pnpm'
+          cache: 'pnpm'   # cache pnpm store via pnpm-lock.yaml
 
-      - name: Enable Corepack and activate pnpm from package.json
+      # ? Install pnpm explicitly (no Corepack)
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          # match your package.json -> "packageManager": "pnpm@10.16.0"
+          version: 10.16.0
+          run_install: false
+
+      - name: Print versions
         run: |
-          corepack enable
-          VERSION=$(node -p "require('./package.json').packageManager.split('@')[1]")
-          echo "Activating pnpm@${VERSION}"
-          corepack prepare pnpm@${VERSION} --activate
-          pnpm --version
+          node -v
+          pnpm -v
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
