--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,17 +12,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10.16.0
           run_install: false
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "pnpm"
 
       - name: Print versions
         run: |
@@ -39,5 +38,5 @@ jobs:
         run: pnpm build
 
       - name: Test
-        if: success() && hashFiles("**/jest.config.*") != ""
+        if: success() && hashFiles("**/jest.config.*") -ne ""
         run: pnpm test -- --ci
