--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # Node first (no cache here)
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: '20.x'
 
+      # Install pnpm onto PATH
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
@@ -38,5 +40,5 @@ jobs:
         run: pnpm build
 
       - name: Test
-        if: success() && hashFiles("**/jest.config.*") -ne ""
+        if: success() && hashFiles('**/jest.config.*') != ''
         run: pnpm test -- --ci
