--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,27 +8,29 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DIRECT_URL: ${{ secrets.DIRECT_URL }}
+      NEXTAUTH_URL: http://localhost:3000
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+      # Optional: quiet telemetry
+      NEXT_TELEMETRY_DISABLED: 1
+      # If you have any “env validation” in code:
+      # SKIP_ENV_VALIDATION: 1
 
     steps:
       - uses: actions/checkout@v4
 
-      # Node first (no cache here)
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: "20.x"
 
-      # Install pnpm onto PATH
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10.16.0
           run_install: false
-
-      - name: Print versions
-        run: |
-          node -v
-          pnpm -v
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -40,5 +42,5 @@ jobs:
         run: pnpm build
 
       - name: Test
-        if: success() && hashFiles('**/jest.config.*') != ''
+        if: success() && hashFiles("**/jest.config.*") != ""
         run: pnpm test -- --ci
