--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,24 +13,30 @@ jobs:
       DIRECT_URL: ${{ secrets.DIRECT_URL }}
       NEXTAUTH_URL: http://localhost:3000
       NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
-      # Optional: quiet telemetry
       NEXT_TELEMETRY_DISABLED: 1
-      # If you have any “env validation” in code:
-      # SKIP_ENV_VALIDATION: 1
+      # SKIP_ENV_VALIDATION: 1  # uncomment if your env validator crashes at build time
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-
+      # Install pnpm explicitly (avoids Corepack/pnpm PATH issues)
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10.16.0
           run_install: false
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          # If you want cache restore for pnpm store, you can add:
+          # cache: 'pnpm'
+
+      - name: Print versions
+        run: |
+          node -v
+          pnpm -v
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -42,5 +48,5 @@ jobs:
         run: pnpm build
 
       - name: Test
-        if: success() && hashFiles("**/jest.config.*") != ""
+        if: success() && hashFiles('**/jest.config.*') != ''
         run: pnpm test -- --ci
