--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@typescript-eslint/parser": "^7.18.0",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.21",
+    "client-only": "0.0.1",
     "cross-env": "^10.0.0",
     "cssnano": "^6.0.1",
     "dotenv": "^17.2.1",
@@ -88,6 +89,7 @@
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.0",
     "prisma": "^6.15.0",
+    "server-only": "0.0.1",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.5",
