--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,52 +1,1 @@
-name: CI
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      DIRECT_URL: ${{ secrets.DIRECT_URL }}
-      NEXTAUTH_URL: http://localhost:3000
-      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
-      NEXT_TELEMETRY_DISABLED: 1
-      # SKIP_ENV_VALIDATION: 1  # uncomment if your env validator crashes at build time
-
-    steps:
-      - uses: actions/checkout@v4
-
-      # Install pnpm explicitly (avoids Corepack/pnpm PATH issues)
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10.16.0
-          run_install: false
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-          # If you want cache restore for pnpm store, you can add:
-          # cache: 'pnpm'
-
-      - name: Print versions
-        run: |
-          node -v
-          pnpm -v
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Typecheck
-        run: pnpm typecheck
-
-      - name: Build
-        run: pnpm build
-
-      - name: Test
-        if: success() && hashFiles('**/jest.config.*') != ''
-        run: pnpm test -- --ci
+# (paste the YAML from above here verbatim)
