chore(editor): silence Tailwind at-rule warnings; tweak globals.css vendorPrefix fix(search): refactor SearchCombobox API + update SearchBox usage fix(auth/csp): middleware cleanup and CSP nonce handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,17 @@
 {
-    "typescript.tsdk": "node_modules\\typescript\\lib"
+  "typescript.tsdk": "node_modules\\typescript\\lib",
+
+  // Silence Tailwind/PostCSS at-rule warnings in the editor
+  "css.lint.unknownAtRules": "ignore",
+  "scss.lint.unknownAtRules": "ignore",
+  "less.lint.unknownAtRules": "ignore",
+  "css.validate": false,
+
+  // Better class name suggestions in strings
+  "editor.quickSuggestions": { "strings": true },
+
+  // Recognize classes inside your classNames() helper
+  "tailwindCSS.experimental.classRegex": [
+    ["classNames\\(([^)]*)\\)", "(?:'|\"|`)([^'\"`]*)(?:'|\"|`)"]
+  ]
 }
