--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,49 +4,37 @@ on:
   push:
     branches:
       - main
-      - deploy/**
+      - deploy/weekly-digest-fixes
   pull_request:
-    branches:
-      - main
-
-permissions:
-  contents: read
-
-concurrency:
-  group: ci-${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   build:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js (20.x) + cache pnpm store
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
 
-      # Install pnpm that matches your repo's packageManager (pnpm@10.16.0)
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10.16.0
+          run_install: false
 
       - name: Show tool versions
         run: |
           node -v
           pnpm -v
 
-      - name: Install dependencies
+      - name: Install
         run: pnpm install --frozen-lockfile
 
       - name: Build
-        env:
-          # Add any build-time env here if needed (safe, non-secrets).
-          NEXT_TELEMETRY_DISABLED: "1"
-          CI: "true"
-        run: pnpm run build
+        run: pnpm build
