--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,42 @@
-﻿name: CI
+# .github/workflows/ci.yml
+name: CI
+
 on:
   push:
+    branches:
+      - main
+      - deploy/weekly-digest-fixes
   pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'pnpm'
-
-      - uses: pnpm/action-setup@v4
+      # Install pnpm first so setup-node can locate the pnpm store for caching
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
         with:
           version: 10.16.0
-          run_install: true
+          run_install: false
+
+      - name: Setup Node.js (20.x) + cache pnpm store
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
+
+      - name: Show tool versions
+        run: |
+          node -v
+          pnpm -v
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
 
       - name: Build
         run: pnpm build
