Deploy/weekly digest fixes (#18)
* ci: add workflow_dispatch trigger

* chore(sitemaps): dynamic routes + DB guard + minimal fallbacks; unify base URL

* fix(runtime): node for pages/monitoring; keep edge for og/placeholder; layout nodejs

* deploy: initial production rollout

* fix(api): weekly-digest + referrals + prisma hardening; runtime=nodejs

* feat(mailer): add mailer + fix store/admin pages; wire weekly digest

* chore(mailer): prefer Resend in prod, SMTP in dev; use EMAIL_FROM/EMAIL_REPLY_TO

* build: cap sitemap queries and add SKIP_SITEMAP_DB; prevent OOM

* fix(store): Next 15 Promise params; make home dynamic (no static gen)

* ci: add workflow_dispatch trigger

* chore(sitemaps): dynamic routes + DB guard + minimal fallbacks; unify base URL

* fix(runtime): node for pages/monitoring; keep edge for og/placeholder; layout nodejs

* deploy: initial production rollout

* fix(api): weekly-digest + referrals + prisma hardening; runtime=nodejs

* feat(mailer): add mailer + fix store/admin pages; wire weekly digest

* chore(mailer): prefer Resend in prod, SMTP in dev; use EMAIL_FROM/EMAIL_REPLY_TO

* build: cap sitemap queries and add SKIP_SITEMAP_DB; prevent OOM

* fix(store): Next 15 Promise params; make home dynamic (no static gen)

* fix(middleware): remove duplicate config; tighten CSP nonce

* chore(editor): silence Tailwind at-rule warnings; tweak globals.css vendorPrefix
fix(search): refactor SearchCombobox API + update SearchBox usage
fix(auth/csp): middleware cleanup and CSP nonce handling

* fix(admin/reveals): accept object or Promise searchParams and resolve safely (Next 15)

* CI: install pnpm via pnpm/action-setup and cache with setup-node

* chore(ci): initialize CI workflow with Node and pnpm setup

* CI: use pnpm/action-setup and cache via setup-node

---------

Co-authored-by: Your Name <you@example.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci.yml
 name: CI
 
 on:
@@ -16,13 +15,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Install pnpm first so setup-node can locate the pnpm store for caching
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10.16.0
-          run_install: false
-
       - name: Setup Node.js (20.x) + cache pnpm store
         uses: actions/setup-node@v4
         with:
@@ -30,12 +22,18 @@ jobs:
           cache: pnpm
           cache-dependency-path: pnpm-lock.yaml
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.16.0
+          run_install: false
+
       - name: Show tool versions
         run: |
           node -v
           pnpm -v
 
-      - name: Install dependencies
+      - name: Install
         run: pnpm install --frozen-lockfile
 
       - name: Build
