--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,25 +15,26 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js (20.x) + cache pnpm store
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: pnpm
-          cache-dependency-path: pnpm-lock.yaml
-
+      # Install pnpm FIRST so setup-node can find it when enabling pnpm cache
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10.16.0
           run_install: false
 
+      - name: Setup Node.js 20 and enable pnpm cache
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
+
       - name: Show tool versions
         run: |
           node -v
           pnpm -v
 
-      - name: Install
+      - name: Install deps
         run: pnpm install --frozen-lockfile
 
       - name: Build
