Deploy/weekly digest fixes (#19)
* ci: add workflow_dispatch trigger

* chore(sitemaps): dynamic routes + DB guard + minimal fallbacks; unify base URL

* fix(runtime): node for pages/monitoring; keep edge for og/placeholder; layout nodejs

* deploy: initial production rollout

* fix(api): weekly-digest + referrals + prisma hardening; runtime=nodejs

* feat(mailer): add mailer + fix store/admin pages; wire weekly digest

* chore(mailer): prefer Resend in prod, SMTP in dev; use EMAIL_FROM/EMAIL_REPLY_TO

* build: cap sitemap queries and add SKIP_SITEMAP_DB; prevent OOM

* fix(store): Next 15 Promise params; make home dynamic (no static gen)

* ci: add workflow_dispatch trigger

* chore(sitemaps): dynamic routes + DB guard + minimal fallbacks; unify base URL

* fix(runtime): node for pages/monitoring; keep edge for og/placeholder; layout nodejs

* deploy: initial production rollout

* fix(api): weekly-digest + referrals + prisma hardening; runtime=nodejs

* feat(mailer): add mailer + fix store/admin pages; wire weekly digest

* chore(mailer): prefer Resend in prod, SMTP in dev; use EMAIL_FROM/EMAIL_REPLY_TO

* build: cap sitemap queries and add SKIP_SITEMAP_DB; prevent OOM

* fix(store): Next 15 Promise params; make home dynamic (no static gen)

* fix(middleware): remove duplicate config; tighten CSP nonce

* chore(editor): silence Tailwind at-rule warnings; tweak globals.css vendorPrefix
fix(search): refactor SearchCombobox API + update SearchBox usage
fix(auth/csp): middleware cleanup and CSP nonce handling

* fix(admin/reveals): accept object or Promise searchParams and resolve safely (Next 15)

* CI: install pnpm via pnpm/action-setup and cache with setup-node

* chore(ci): initialize CI workflow with Node and pnpm setup

* CI: use pnpm/action-setup and cache via setup-node

* fix(admin/reveals): update searchParams type to accept only Promise for Next 15 compatibility

---------

Co-authored-by: Your Name <you@example.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+﻿name: CI
 
 on:
   push:
@@ -15,26 +15,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js (20.x) + cache pnpm store
-        uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v4
         with:
-          node-version: 20
-          cache: pnpm
-          cache-dependency-path: pnpm-lock.yaml
+          version: 9
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
         with:
-          version: 10.16.0
-          run_install: false
+          node-version: '20'
+          cache: 'pnpm'
 
-      - name: Show tool versions
-        run: |
-          node -v
-          pnpm -v
-
-      - name: Install
-        run: pnpm install --frozen-lockfile
-
-      - name: Build
-        run: pnpm build
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm lint
+      - run: pnpm build
