Deploy/weekly digest fixes (#20)
* ci: add workflow_dispatch trigger

* chore(sitemaps): dynamic routes + DB guard + minimal fallbacks; unify base URL

* fix(runtime): node for pages/monitoring; keep edge for og/placeholder; layout nodejs

* deploy: initial production rollout

* fix(api): weekly-digest + referrals + prisma hardening; runtime=nodejs

* feat(mailer): add mailer + fix store/admin pages; wire weekly digest

* chore(mailer): prefer Resend in prod, SMTP in dev; use EMAIL_FROM/EMAIL_REPLY_TO

* build: cap sitemap queries and add SKIP_SITEMAP_DB; prevent OOM

* fix(store): Next 15 Promise params; make home dynamic (no static gen)

* ci: add workflow_dispatch trigger

* chore(sitemaps): dynamic routes + DB guard + minimal fallbacks; unify base URL

* fix(runtime): node for pages/monitoring; keep edge for og/placeholder; layout nodejs

* deploy: initial production rollout

* fix(api): weekly-digest + referrals + prisma hardening; runtime=nodejs

* feat(mailer): add mailer + fix store/admin pages; wire weekly digest

* chore(mailer): prefer Resend in prod, SMTP in dev; use EMAIL_FROM/EMAIL_REPLY_TO

* build: cap sitemap queries and add SKIP_SITEMAP_DB; prevent OOM

* fix(store): Next 15 Promise params; make home dynamic (no static gen)

* fix(middleware): remove duplicate config; tighten CSP nonce

* chore(editor): silence Tailwind at-rule warnings; tweak globals.css vendorPrefix
fix(search): refactor SearchCombobox API + update SearchBox usage
fix(auth/csp): middleware cleanup and CSP nonce handling

* fix(admin/reveals): accept object or Promise searchParams and resolve safely (Next 15)

* CI: install pnpm via pnpm/action-setup and cache with setup-node

* chore(ci): initialize CI workflow with Node and pnpm setup

* CI: use pnpm/action-setup and cache via setup-node

* fix(admin/reveals): update searchParams type to accept only Promise for Next 15 compatibility

* chore(ci): update CI workflow for improved pnpm and Node.js setup

* fix(ci): remove unnecessa

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,63 @@
-﻿name: CI
+name: CI
 
 on:
   push:
-    branches:
-      - main
-      - deploy/weekly-digest-fixes
+    branches: [main, deploy/weekly-digest-fixes]
   pull_request:
+  workflow_dispatch:
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      NEXT_TELEMETRY_DISABLED: "1"
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
+      - name: Setup pnpm 10.16.0
+        uses: pnpm/action-setup@v4
         with:
-          version: 9
+          version: 10.16.0
+          run_install: false
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js 20 + pnpm cache
+        uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'pnpm'
+          node-version: 20
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
 
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm lint
-      - run: pnpm build
+      - name: Restore Next.js build cache
+        uses: actions/cache@v4
+        with:
+          path: .next/cache
+          key: next-cache-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            next-cache-${{ runner.os }}-
+
+      - name: Install
+        run: pnpm install --frozen-lockfile
+
+      - name: Typecheck
+        run: pnpm typecheck
+
+      - name: Lint
+        run: pnpm lint
+
+      # - name: Test
+      #   run: pnpm test -- --run
+
+      - name: Build
+        run: pnpm build
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DIRECT_URL: ${{ secrets.DIRECT_URL }}
+          UPSTASH_REDIS_REST_URL: ${{ secrets.UPSTASH_REDIS_REST_URL }}
+          UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
+          NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME: ${{ secrets.NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME }}
