--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,12 @@
-name: CI
+﻿name: CI
 
 on:
   push:
-    branches: [main, deploy/weekly-digest-fixes]
-  pull_request:
-  workflow_dispatch:
+    branches:
+      - main
+      - deploy/weekly-digest-fixes
+  pull_request: {}
+  workflow_dispatch: {}
 
 concurrency:
   group: ci-${{ github.ref }}
