Chore/fix ci yaml (#22)
* ci: add workflow_dispatch trigger

* chore(sitemaps): dynamic routes + DB guard + minimal fallbacks; unify base URL

* fix(runtime): node for pages/monitoring; keep edge for og/placeholder; layout nodejs

* deploy: initial production rollout

* fix(api): weekly-digest + referrals + prisma hardening; runtime=nodejs

* feat(mailer): add mailer + fix store/admin pages; wire weekly digest

* chore(mailer): prefer Resend in prod, SMTP in dev; use EMAIL_FROM/EMAIL_REPLY_TO

* build: cap sitemap queries and add SKIP_SITEMAP_DB; prevent OOM

* fix(store): Next 15 Promise params; make home dynamic (no static gen)

* ci: add workflow_dispatch trigger

* chore(sitemaps): dynamic routes + DB guard + minimal fallbacks; unify base URL

* fix(runtime): node for pages/monitoring; keep edge for og/placeholder; layout nodejs

* deploy: initial production rollout

* fix(api): weekly-digest + referrals + prisma hardening; runtime=nodejs

* feat(mailer): add mailer + fix store/admin pages; wire weekly digest

* chore(mailer): prefer Resend in prod, SMTP in dev; use EMAIL_FROM/EMAIL_REPLY_TO

* build: cap sitemap queries and add SKIP_SITEMAP_DB; prevent OOM

* fix(store): Next 15 Promise params; make home dynamic (no static gen)

* fix(middleware): remove duplicate config; tighten CSP nonce

* chore(editor): silence Tailwind at-rule warnings; tweak globals.css vendorPrefix
fix(search): refactor SearchCombobox API + update SearchBox usage
fix(auth/csp): middleware cleanup and CSP nonce handling

* fix(admin/reveals): accept object or Promise searchParams and resolve safely (Next 15)

* CI: install pnpm via pnpm/action-setup and cache with setup-node

* chore(ci): initialize CI workflow with Node and pnpm setup

* CI: use pnpm/action-setup and cache via setup-node

* fix(admin/reveals): update searchParams type to accept only Promise for Next 15 compatibility

* chore(ci): update CI workflow for improved pnpm and Node.js setup

* fix(ci): remove unnecessary commen

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,11 @@ name: CI
 
 on:
   push:
-    branches: [main, deploy/weekly-digest-fixes]
-  pull_request:
-  workflow_dispatch:
+    branches:
+      - main
+      - deploy/weekly-digest-fixes
+  pull_request: {}
+  workflow_dispatch: {}
 
 concurrency:
   group: ci-${{ github.ref }}
