--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^8.57.0",
+    "@next/bundle-analyzer": "^15.5.3",
     "@next/eslint-plugin-next": "^15.5.2",
     "@playwright/test": "^1.55.0",
     "@rushstack/eslint-patch": "^1.12.0",
