Chore/fix ci yaml (#29)
* ci: add workflow_dispatch trigger

* chore(sitemaps): dynamic routes + DB guard + minimal fallbacks; unify base URL

* fix(runtime): node for pages/monitoring; keep edge for og/placeholder; layout nodejs

* deploy: initial production rollout

* fix(api): weekly-digest + referrals + prisma hardening; runtime=nodejs

* feat(mailer): add mailer + fix store/admin pages; wire weekly digest

* chore(mailer): prefer Resend in prod, SMTP in dev; use EMAIL_FROM/EMAIL_REPLY_TO

* build: cap sitemap queries and add SKIP_SITEMAP_DB; prevent OOM

* fix(store): Next 15 Promise params; make home dynamic (no static gen)

* ci: add workflow_dispatch trigger

* chore(sitemaps): dynamic routes + DB guard + minimal fallbacks; unify base URL

* fix(runtime): node for pages/monitoring; keep edge for og/placeholder; layout nodejs

* deploy: initial production rollout

* fix(api): weekly-digest + referrals + prisma hardening; runtime=nodejs

* feat(mailer): add mailer + fix store/admin pages; wire weekly digest

* chore(mailer): prefer Resend in prod, SMTP in dev; use EMAIL_FROM/EMAIL_REPLY_TO

* build: cap sitemap queries and add SKIP_SITEMAP_DB; prevent OOM

* fix(store): Next 15 Promise params; make home dynamic (no static gen)

* fix(middleware): remove duplicate config; tighten CSP nonce

* chore(editor): silence Tailwind at-rule warnings; tweak globals.css vendorPrefix
fix(search): refactor SearchCombobox API + update SearchBox usage
fix(auth/csp): middleware cleanup and CSP nonce handling

* fix(admin/reveals): accept object or Promise searchParams and resolve safely (Next 15)

* CI: install pnpm via pnpm/action-setup and cache with setup-node

* chore(ci): initialize CI workflow with Node and pnpm setup

* CI: use pnpm/action-setup and cache via setup-node

* fix(admin/reveals): update searchParams type to accept only Promise for Next 15 compatibility

* chore(ci): update CI workflow for improved pnpm and Node.js setup

* fix(ci): remove unnecessary commen

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+﻿name: CI
 
 on:
   push:
@@ -14,9 +14,19 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
+    permissions:
+      contents: read
+      packages: read
+
+    # Make secrets available to all steps and silence VS Code context warnings
     env:
       NEXT_TELEMETRY_DISABLED: "1"
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DIRECT_URL: ${{ secrets.DIRECT_URL }}
+      UPSTASH_REDIS_REST_URL: ${{ secrets.UPSTASH_REDIS_REST_URL }}
+      UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
+      NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME: ${{ secrets.NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME }}
 
     steps:
       - name: Checkout
@@ -57,9 +67,3 @@ jobs:
 
       - name: Build
         run: pnpm build
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          DIRECT_URL: ${{ secrets.DIRECT_URL }}
-          UPSTASH_REDIS_REST_URL: ${{ secrets.UPSTASH_REDIS_REST_URL }}
-          UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
-          NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME: ${{ secrets.NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME }}
