--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,15 @@ jobs:
       contents: read
       packages: read
 
-    # Make secrets available to all steps and silence VS Code context warnings
+    # Make secrets available to all steps
     env:
       NEXT_TELEMETRY_DISABLED: "1"
+      # App URLs (set these secrets/vars in the repo settings)
+      NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL }}
+      NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL }}
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+
+      # DB + Redis + misc
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       DIRECT_URL: ${{ secrets.DIRECT_URL }}
       UPSTASH_REDIS_REST_URL: ${{ secrets.UPSTASH_REDIS_REST_URL }}
