--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts",
-    "db:seed:120": "cross-env SEED_RESET=1 SEED_MIN=120 prisma db seed",
+    "db:seed": "prisma db seed",
+    "seed:demo": "cross-env SEED_DEMO=1 prisma db seed",
+    "seed:reset": "cross-env SEED_RESET=1 SEED_RESET_ALL=1 prisma db seed",
+    "seed:clear-demo": "cross-env SEED_PURGE_DEMO=1 prisma db seed",
+    "db:seed:120": "cross-env SEED_RESET=1 SEED_RESET_ALL=1 SEED_DEMO=1 prisma db seed",
     "db:purge": "tsx scripts/purge.ts",
     "backup": "tsx scripts/backup.ts",
     "health:local": "cross-env NODE_ENV=production curl -s http://localhost:3000/api/health || echo \"health check requires curl\"",
@@ -40,7 +43,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.888.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.15.0",
+    "@prisma/client": "^6.16.3",
     "@sentry/nextjs": "^10.10.0",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
@@ -93,7 +96,7 @@
     "playwright": "^1.55.0",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.0",
-    "prisma": "^6.15.0",
+    "prisma": "^6.16.3",
     "server-only": "0.0.1",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
