--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@upstash/redis": "^1.35.3",
     "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
