﻿feat(admin+search+api): admin gate, delete control, search UX; API hardening
- Admin:
  - tighten /admin guard (role check + OTP store hardening)
  - dashboard & moderation pages stabilized
- Delete controls:
  - unified DeleteListingButton (removed duplicated dashboard copy)
  - owner/role gate + toast UX
- Search:
  - header Enter-to-submit from any route (Home included)
  - tolerant matching for services (handles multi-word like "mama fua")
  - consistent debounce + form submit
- API:
  - products/services/home-feed: pageSize vs limit precedence, cursor paging, null-price handling
  - revalidate endpoints for detail pages
  - upload/sign split; safer content-type checks
  - idempotency helpers + unit tests
- DX:
  - prisma migration: unify_listing_status
  - sentry client config, caps checker script

Build: passes lint, types, tests locally.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,10 +24,8 @@
 
     "plugins": [{ "name": "next" }],
 
-    /* Make TS happy in tests & Next env */
     "types": ["@types/node", "vitest/globals", "next/types/global"],
 
-    /* extra safety (opt-in) */
     "exactOptionalPropertyTypes": true,
     "noUncheckedIndexedAccess": true,
     "useUnknownInCatchVariables": true,
@@ -36,10 +34,15 @@
   },
   "include": [
     "next-env.d.ts",
-    "src",
-    "tests",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "tests/**/*.ts",
+    "tests/**/*.tsx",
     "src/types/**/*.d.ts",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "src/app/sitemap.xml/**"   // legacy route removed; keep TS from looking here
+  ]
 }
