--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "postinstall": "prisma generate",
+    "check:caps": "node scripts/check-caps.js",
     "lint": "echo \"(lint disabled)\"",
     "lint:fix": "echo \"(lint disabled)\"",
     "typecheck": "tsc --noEmit",
@@ -45,6 +46,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.3",
     "@sentry/nextjs": "^10.10.0",
+    "@sentry/replay": "^7.116.0",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
     "@vercel/analytics": "^1.5.0",
@@ -91,7 +93,6 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-tailwindcss": "^3.18.2",
-    "eslint-plugin-unused-imports": "^4.2.0",
     "globals": "^16.3.0",
     "pino-pretty": "^11.2.2",
     "playwright": "^1.55.0",
