Sentry: finalize setup (keep tunnel), remove samples; tabs cleanup; config/middleware updates

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,9 @@ prisma.config.ts
 /playwright-report/
 /test-results/
 /blob-report/
+
+# Sentry Config File
+.env.sentry-build-plugin
+
+.vscode/
+
