--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.3",
     "@radix-ui/react-slot": "^1.2.3",
-    "@sentry/nextjs": "^10.10.0",
+    "@sentry/nextjs": "10",
     "@sentry/replay": "^7.116.0",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
